# ResourceManagerModule

./: .gitattributes  .gitignore  .gitmodules  0001-handle-equality-and-obvious-cleanup.patch  0002-move-duplicated-dx12-structs-and-constants.patch  0003-build-editor-selection-lists-once-per-frame.patch  0004-share-dx12-editor-selection-draw-helpers-across-passes.patch  0005-main-extract-app-runtime-helpers-header.patch  0005-share-gizmo-selection-and-pivot-helpers.patch  0007-main-extract-app-lifecycle-header.patch  0015_fix_point_shadow_face_mapping.patch  0020-point-shadow-2darray-sampling.patch  0021-fix-bind-texture2darray-srv.patch  CMakeLists.txt  CMakeSettings.json  OpenGL_compile_fix_clean.patch  v1.4.7.2_mouse_picking_main_viewport.patch
assets/animControllers/: fsm_test_locomotion_action.phaseA.json
assets/animations/: Running Backward.fbx  Walking Backwards.fbx
assets/levels/: demo.level.json  demo.level.with_fsm_test.json  demo.level.with_fsm_test.locomotion.json  demo.level.with_fsm_test.locomotion.phaseA.json  demo.level.with_fsm_test.notifies.json  demo.level1.json  fsm_test_idle_dance.controller.json
assets/models/: Character.fbx
assets/shaders/: BloomBlur_dx12.hlsl  BloomComposite_dx12.hlsl  BloomExtract_dx12.hlsl  DebugCubeAtlas_dx12.hlsl  DebugGizmos_dx12.hlsl  DebugText_dx12.hlsl  DeferredGBuffer_dx12.hlsl  DeferredLighting_dx12.hlsl  FS.frag  FXAA_dx12.hlsl  FogPost_dx12.hlsl  GlobalShaderInstanced_dx12.hlsl  GlobalShader_dx12.hlsl  Mesh_dx12.hlsl  Particles_dx12.hlsl  ReflectionCaptureLayered_dx12.hlsl  ReflectionCaptureVI_dx12.hlsl  SSAOBlur_dx12.hlsl  SSAOComposite_dx12.hlsl  SSAO_dx12.hlsl  ShadowPointLayered_dx12.hlsl  Shadow_dx12.hlsl  SkyboxFS.frag  SkyboxVS.vert  Skybox_dx12.hlsl  ToneMap_dx12.hlsl  VS.vert
src/: Core.ixx  ResourceManager_core.cppm  TextureManager.cppm  TextureManager.ixx  TextureManager_impl.cpp  main.cpp
src/App/: AppBootstrap.h  AppLifecycle.cpp  AppLifecycle.h  AppRuntimeHelpers.h  DebugUiHost.cpp  DebugUiHost.h  EditorViewportInteraction.h  Win32AppShell.h
src/Assets/: AssetManager.cppm  ResourceManager.ixx  ResourceManager_core.cppm  ResourceManager_mesh.cppm  ResourceManager_texture.cppm
src/Core/: Core.ixx
src/Core/Hash/: HashUtils.cppm
src/Core/Math/: MathUtils.cppm
src/ECS/: EnTTHelpers.cppm
src/Gameplay/: Gameplay.cppm  GameplayAnimationBridge.cppm  GameplayRefactorNotes.md  GameplayRuntime.cppm  GameplayWorld.cppm  GameplayWorld_impl.cppm  Gameplay_impl.cppm
src/Gameplay/Camera/: GameplayFollowCamera.cppm
src/Gameplay/Character/: CharacterController.cppm  CharacterMovement.cppm
src/Gameplay/Runtime/: GameplayBootstrap.cppm  GameplayRuntime.cppm  GameplayRuntimeCommon.cppm  GameplaySceneSync.cppm
src/Input/: Win32Input.cppm
src/Render/: Bindless.cppm  FileSystem.cppm  GpuMemory.cppm  RHI.cppm  Render.ixx  RenderCore.cppm  RenderGraph.cppm  Renderer.cppm  RendererSettings.cppm  Scene.cppm  SceneBridge.cppm  ShaderFiles.cppm  ShaderSystem.cppm  Sync.cppm
src/Render/Animation/: AnimationController.cppm  Animator.cppm
src/Render/Debug/: DebugDraw.cppm  DebugText.cppm
src/Render/Decoders/: TextureDecoderSTB.cppm
src/Render/DirectX12/: CommonDX12Structs.cppm  DebugTextRendererDX12.cppm  DirectX12Core.cppm  DirectX12RHI.cppm  DirectX12Renderer.cppm  DirectX12TextureUploader.cppm  RenderDX12.ixx
src/Render/DirectX12/RHIImpl/: DirectX12RHI_Device.inl  DirectX12RHI_Device_Descriptors.inl  DirectX12RHI_Device_PrivateTypes.inl  DirectX12RHI_Device_Public_CommandSubmission.inl  DirectX12RHI_Device_Public_CommandSubmission_DrawAndImGuiCommands.inl  DirectX12RHI_Device_Public_CommandSubmission_PSOHelpers.inl  DirectX12RHI_Device_Public_CommandSubmission_PassCommands.inl  DirectX12RHI_Device_Public_CommandSubmission_StateAndBindingCommands.inl  DirectX12RHI_Device_Public_Core.inl  DirectX12RHI_Device_Public_DescriptorsAndFences.inl  DirectX12RHI_Device_Public_ShaderPipelineEx.inl  DirectX12RHI_Device_Public_Textures.inl  DirectX12RHI_Device_RootSignature.inl  DirectX12RHI_Device_State.inl  DirectX12RHI_SwapChain.inl  DirectX12RHI_SwapChainImpl.inl
src/Render/DirectX12/RendererImpl/: DirectX12Renderer_CreateResources_00_PathsSkybox.inl  DirectX12Renderer_CreateResources_01_MainPipelines.inl  DirectX12Renderer_CreateResources_02_ShadowPipelines.inl  DirectX12Renderer_CreateResources_03_DynamicBuffers.inl  DirectX12Renderer_RenderFrame_01_BuildInstances.inl  DirectX12Renderer_RenderFrame_01_BuildInstances_FinalizeAndUpload.inl  DirectX12Renderer_RenderFrame_01_BuildInstances_MainTransparentReflectionPacking.inl  DirectX12Renderer_RenderFrame_02_ReflectionCapture.inl  DirectX12Renderer_RenderFrame_02_ShadowPasses.inl  DirectX12Renderer_RenderFrame_03_PreDepth.inl  DirectX12Renderer_RenderFrame_04_MainPass.inl  DirectX12Renderer_RenderFrame_04_MainPass_00_Shared.inl  DirectX12Renderer_RenderFrame_04_MainPass_01_Deferred.inl  DirectX12Renderer_RenderFrame_04_MainPass_01a_DeferredGeometryAndLighting.inl  DirectX12Renderer_RenderFrame_04_MainPass_01b_DeferredPost.inl  DirectX12Renderer_RenderFrame_04_MainPass_01c_DeferredTransparentAndSelection.inl  DirectX12Renderer_RenderFrame_04_MainPass_02_Forward.inl  DirectX12Renderer_RenderFrame_04a_PlanarReflections.inl  (+4 more)
src/Render/ImGui/: ImGuiDebugUI.cppm  ImGuiDebugUI_LevelFile.inl  ImGuiDebugUI_LevelInspector.inl  ImGuiDebugUI_LevelShared.inl  ImGuiDebugUI_Light.inl  ImGuiDebugUI_RendererCore.inl
src/Render/Model/: AnimationClip.cppm  AssimpLoader.cppm  AssimpSceneLoader.cppm  Skeleton.cppm  SkinnedMesh.cppm
src/Render/OpenGL/: OpenGLCore.cppm  OpenGLMeshRenderer.cppm  OpenGLRHI.cppm  OpenGLRenderer.cppm  RenderGL.ixx
src/Render/Scene/: CameraController.cppm  EditorGizmo.cppm  EditorRotateGizmo.cppm  EditorScaleGizmo.cppm  Level.cppm  LevelECS.cppm  LevelECS_impl.cppm  Picking.cppm  Scene.cppm  SceneBridge.cppm  Visibility.cppm
src/Render/Shader/: ShaderFiles.cppm  ShaderSystem.cppm
src/Timer/: GameTimer.cppm  GameTimer.ixx  GameTimer_impl.cpp
tests/: CMakeLists.txt  FakeTextureIO.h  test_texture_basic.cpp
tests/unit/Math/: TestMathUtils.cpp
(+12 files in other folders)
